# ad-lateral-scripts

./: cimsession.py  main.py  pssession.py  pyproject.toml  readme.md  shells.py  winrs.py  wmi.py
src/ad_lateral_scripts/: __main__.py  cimsession.py  connection.py  dcom.py  main.py  pssession.py  winrs.py
tests/: test_main.py
