[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ad-lateral-scripts"
version = "0.1.0"
description = "AD lateral movement helpers"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Stephen Wildow" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "pytest-cov"]

[project.scripts]
ad-lateral-scripts = "ad_lateral_scripts.main:main"  # CLI: `ad-lateral-scripts`

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
